# odin

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  check.sh  deploy.sh
src/: configuration.rs  devices.rs  gpio.rs  home.rs  main.rs  runtime.rs  sensors.rs  serial.rs  serial_channel.rs  state.rs  timer.rs  utils.rs  web.rs
src/controller/: lighting.rs  mod.rs  switch.rs  tap.rs
src/devices/: beam.rs  mod.rs  serial.rs  web.rs
src/handler/: dimmer.rs  leaks.rs  mod.rs  odin.rs  switch.rs
src/home/: bad_room.rs  balcony.rs  bathroom.rs  configuration.rs  corridor.rs  kitchen.rs  living_room.rs  mod.rs  script.rs  toilet.rs
src/home/automation/: auto_shutdown.rs  blackout.rs  mod.rs  web_beam_updater.rs
src/home/rooms/: bad_room.rs  balcony.rs  bathroom.rs  corridor.rs  kitchen.rs  living_room.rs  mod.rs  toilet.rs
src/home/scripts/: mod.rs  scheme.rs  switch.rs
src/io/: lora.rs  mod.rs  serial.rs  web.rs
src/transport/: error.rs  mod.rs  web.rs
src/web/: backend.rs  mod.rs  web.rs
